--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Parallax effect</title>
     <link rel="stylesheet" href="./index.css" />
 </head>
 <body>
@@ -18,7 +18,9 @@
         <div class="image image-foreground">
             <img src="./goku-character.png" alt="">
         </div>
+        <div class="card-container">
+            <p>hola</p>
+        </div>
     </div>
-    
 </body>
 </html>
